[package]
name = "geoffrey"
version = "0.1.0"
authors = ["Mathias Kraus <elboberido@m-hiad.de>"]
edition = "2021"
license = "Apache-2.0"
description = "Syncs source code to markdown code blocks"
readme = "README.md"
repository = "https://github.com/ekxide/geoffrey"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flexi_logger = "0.31"
log = "0.4"
rayon = "1.11"
regex = "1"
thiserror = "2.0"
yansi = "1.0"

[dev-dependencies]
tempfile = "3"
